--- a/vignettes/articles/background.Rmd
+++ b/vignettes/articles/background.Rmd
@@ -27,7 +27,7 @@ The following two methods randomize the environmental data, i.e. the SpatRaster 
 The torus-translation test (Harms et al. 2001) shifts the habitat map in all four cardinal directions around a torus. This is only possible for square rasters. To use this method in **shar** use `translate_raster()`.
 
 ### Randomized-habitats procedure
-The randomze-habitats procedure (Harms et al. 2001) is also possible for non-square raster and randomizes the habitats using a random-walk algorithm. To use this method in **shar** use `randomize_raster()`.
+The randomized-habitats procedure (Harms et al. 2001) is also possible for non-square raster and randomizes the habitats using a random-walk algorithm. To use this method in **shar** use `randomize_raster()`.
 
 ```{r random-walk, echo = FALSE, out.height = "35%", out.width = "35%", fig.align = "center"}
 knitr::include_graphics("random_walk.gif")
