--- a/README.Rmd
+++ b/README.Rmd
@@ -129,7 +129,7 @@ Contributions to **shar** are highly welcomed and appreciated. This includes any
 
 Please note that the **shar** package is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
 
-To see how to contribute to this project, please see the [Contributing guidelines](CONTRIBUTING.md).
+To contribute to this project, please see the [Contributing guidelines](CONTRIBUTING.md).
 
 ### References 
 
