[skip-ci] Touch readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output: 
+    github_document:
+      html_preview: false
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -43,8 +45,7 @@ install.packages("shar")
 And the development version from [GitHub](https://github.com/r-spatialecology/shar) with:
 
 ```{r install-github, eval = FALSE}
-install.packages("remotes")
-
+# install.packages("remotes")
 remotes::install_github("r-spatialecology/shar")
 ```
 
