--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ And the development version from [GitHub](https://github.com/r-spatialecology/sh
 remotes::install_github("r-spatialecology/shar")
 ```
 
-This also automatically installs all non-base `R` package dependencies, namely the following packages: `classInt`, `raster`, `spatstat.core`, `spatstat.geom`.
+This also automatically installs all non-base `R` package dependencies, namely the following packages: `classInt`, `raster`, `spatstat.explore`, `spatstat.model`, `spatstat.geom`.
 
 ## How to use shar
 
